--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>NAMU</title>
     <link
       rel="icon"
-      href="./images/favicon.ico"
+      href="./images/icons/favicon.ico"
       type="image/x-icon"
     >
     <link rel="stylesheet" href="./styles/main.scss">
@@ -18,7 +18,7 @@
       <div class="header__indent"></div>
       <div class="header__elements">
         <a href="#menu" class="header__menu-button">
-          <img src="./images/menu-icon.svg" alt="">
+          <img src="./images/icons/menu-icon.svg" alt="">
         </a>
         <h1 class="header__title">
           ХУДОЖ<span class="header__title--special">НІЙ</span>
@@ -47,7 +47,7 @@
             <a href="#actual" class="menu__link link">Відвідування</a>
           </li>
           <li class="menu__item">
-            <a href="" class="menu__link link">Стати нашим другом</a>
+            <a href="#subscribe" class="menu__link link">Стати нашим другом</a>
           </li>
           <li class="menu__item">
             <a href="" class="menu__link link">Про Нас</a>
@@ -59,12 +59,12 @@
             <a href="" class="menu__link link">Блог</a>
           </li>
           <li class="menu__item">
-            <a href="" class="menu__link link">Контакти</a>
+            <a href="#contacts" class="menu__link link">Контакти</a>
           </li>
         </ul>
         <div class="menu__search">
           <a href="" class="menu__search-icon">
-            <img src="./images/search.svg" alt="search-icon">
+            <img src="./images/icons/search-icon.svg" alt="search-icon">
           </a>
         </div>
       </div>
@@ -83,9 +83,9 @@
             <span class="event__type">ВИСТАВКА</span>
             <span class="event__date">26.08-29.11.2019</span>
           </div>
-          <div class="event__title">
+          <a href="" class="event__title link">
             Йду і повертаюсь
-          </div>
+          </a>
           <div class="event__about">
             Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br>
             1980-1995 років.
@@ -103,9 +103,9 @@
             <span class="event__type">ВИСТАВКА</span>
             <span class="event__date">26.08-29.11.2019</span>
           </div>
-          <div class="event__title">
+          <a href="#" class="event__title link">
             І спогади і мрії
-          </div>
+          </a>
           <div class="event__about">
             Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
           </div>
@@ -118,11 +118,124 @@
           <span class="lecture__type">ЛЕКЦІЯ</span>
           <span class="lecture__date">26/08/2019 - 11:00</span>
         </div>
-        <div class="lecture__title">
+        <a href="" class="lecture__title link">
           Від класицизму до романтизму
-        </div>
+        </a>
       </div>
     </div>
+
+    <div class="page__subscription subscription" id="subscribe">
+      <div class="subscription__text">
+        <div class="subscription__title">Підписка</div>
+        <label for="subscription" class="subscription__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </label>
+      </div>
+      <form class="subscription__form" action="">
+        <input
+          id="subscription"
+          name="email"
+          type="email"
+          class="subscription__form-field"
+          placeholder="E-mail"
+          required
+        >
+        <button class="subscription__button"></button>
+      </form>
+    </div>
+
+    <footer class="footer page__section">
+      <div class="footer__icons">
+        <a href="#" class="footer__logo link">NA<br>MU</a>
+        <div class="footer__soc-links">
+          <a
+          href="https://www.facebook.com/namu.museum/"
+          rel="noopener"
+          target="_blank"
+          class="footer__soc-link link"
+          >
+            <img src="./images/icons/Facebook-icon.svg" alt="Facebook-icon">
+          </a>
+          <a
+          href="https://www.instagram.com/namu.museum/"
+          rel="noopener"
+          target="_blank"
+          class="footer__soc-link link"
+          >
+            <img src="./images/icons/insta-icon.svg" alt="Instagram-icon">
+          </a>
+        </div>
+      </div>
+      <div class="footer__wrapper">
+        <div class="footer__info">
+          <div class="footer__schedule">
+            <div class="footer__info-title">Графік роботи</div>
+            <div class="footer__schedule-hours">
+              <span class="footer__bold-text">12:00 — 20:00</span> середа
+              <br>
+              <span class="footer__bold-text">12:00 — 20:00</span> четвер
+              <br>
+              <span class="footer__bold-text">12:00 — 20:00</span> п’ятниця
+              <br>
+              <span class="footer__bold-text">11:00 — 19:00</span> субота
+              <br>
+              <span class="footer__bold-text">11:00 — 19:00</span> неділя
+            </div>
+            <div class="footer__schedule-info">
+              <span class="footer__bold-text">Вихідні:</span> понеділок,
+              <br>
+               вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              <br>
+              до закриття музею
+            </div>
+          </div>
+          <div class="footer__contacts" id="contacts">
+            <div class="footer__info-title">Контакти:</div>
+            <div class="footer__contacts-info">
+              вул. М. Грушевського, 6;
+              <br>
+              Київ, 01001
+              <br>
+              <a href="tel:38044278-13-57" class="link">тел. +38 (044) 278-13-57</a>
+              <br>
+              факс +38 (044) 278-74-54
+              <br>
+              <a href="mailto:info@namu.kiev.ua" class="link">e-mail: info@namu.kiev.ua</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer__nav">
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="" class="footer__nav-link link">Галерея</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="" class="footer__nav-link link">Про Нас</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#events" class="footer__nav-link link">Виставки та події</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="" class="footer__nav-link link">Магазин</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#actual" class="footer__nav-link link">Відвідування</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="" class="footer__nav-link link">Блог</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#subscribe" class="footer__nav-link link">Стати нашим другом</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#contacts" class="footer__nav-link link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
