--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,19 @@
     <title>Art museum</title>
     <link rel="icon" href="./images/favicon.svg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
     <header class="page__header header">
       <div class="container">
         <div class="header__content">
-          <a href="#" class="header__logo link">
+          <a href="" class="header__logo link">
             NA
             <br>
             MU
           </a>
           <div class="header__elements">
-            <a href="#" class="header__opener">
+            <a href="" class="header__opener">
               <img src="images/opener.svg" alt="Opener">
             </a>
     
@@ -30,23 +31,23 @@
     </header>
 
     <main class="main">
-      <section class="main__events">
+      <section class="main__events" id="events">
         <div class="container">
           <h3 class="main__title">Актуальні події</h3>
 
-          <article class="main__event main__event--first event">
+          <article class="main__event event">
             <img
               class="event__image"
               src="images/Dnipro.png"
               alt="Dnipro"
             >
 
-            <div class="event__description">
+            <div class="event__description event__description--straight">
               <div class="event__type-and-date">
                 <span class="event__type">Виставка</span>
                 <span class="event__date">26.08-29.11.2019</span>
               </div>
-              <a href="#" class="event__title link">
+              <a href="" class="event__title link">
                 Йду і повертаюсь
               </a>
               <div class="event__about">
@@ -56,19 +57,19 @@
             </div>
           </article>
 
-          <article class="main__event event">
+          <article class="main__event event event--reverse">
             <img
               class="event__image"
               src="images/peacock.png"
               alt="Dnipro"
             >
 
-            <div class="event__description">
+            <div class="event__description event__description--reverse">
               <div class="event__type-and-date">
                 <span class="event__type">Виставка</span>
                 <span class="event__date">26.08-29.11.2019</span>
               </div>
-              <a href="#" class="event__title link">
+              <a href="" class="event__title link">
                 І спогади і мрії
               </a>
               <div class="event__about">
@@ -76,19 +77,177 @@
                 1980-1995 років.
               </div>
             </div>
-          </article> 
+          </article>
         </div>
       </section>
 
-      <section class="main__lection lection">
+      <section class="main__lecture lecture" id="lectures">
         <div class="container">
-          <div class="lection__card">
-
+          <div class="lecture__card">
+            <div class="lecture__type-and-date">
+              <span class="lecture__type">Лекція</span>
+              <span class="lecture__date">26/08/2019 - 11:00</span>
+            </div>
+            <a href="" class="lecture__title link">
+              Від класицизму до романтизму
+            </a>
           </div>
+        </div>
+      </section>
+
+      <section class="main__gallery gallery" id="gallery">
+        <div class="container">
+          <h2 class="main__gallery-title">
+            Галерея
+          </h2>
+
+          <div class="gallery__container-desktop">
+            <ul class="gallery__list-desktop">
+              <li class="gallery__item-desktop gallery__item-desktop--1">
+                <img
+                  src="./images/women.png"
+                  alt="women"
+                  class="gallery__img-desktop"
+                >
+              </li>
+              <li class="gallery__item-desktop gallery__item-desktop--2">
+                <img
+                  src="./images/winter.png"
+                  alt="winter"
+                  class="gallery__img-desktop"
+                >
+              </li>
+              <li class="gallery__item-desktop gallery__item-desktop--3">
+                <img
+                  src="./images/park.png"
+                  alt="park"
+                  class="gallery__img-desktop"
+                >
+              </li>
+              <li class="gallery__item-desktop gallery__item-desktop--4">
+                <img
+                  src="./images/sea.png"
+                  alt="sea"
+                  class="gallery__img-desktop"
+                >
+              </li>
+              <li class="gallery__item-desktop gallery__item-desktop--5">
+                <img
+                  src="./images/geese.png"
+                  alt="geese"
+                  class="gallery__img-desktop"
+                >
+              </li>
+              <li class="gallery__item-desktop gallery__item-desktop--6">
+                <img
+                src="./images/people.png"
+                alt="people"
+                class="gallery__img-desktop">
+              </li>
+            </ul>
+          </div>
+
+          <div class="gallery__container">
+            <div class="gallery__wrapper">
+              <ul class="gallery__list">
+                <li class="gallery__item">
+                  <img
+                    src="./images/women.png"
+                    alt="women"
+                    class="gallery__img"
+                  >
+                </li>
+                <li class="gallery__item">
+                  <img
+                    src="./images/winter.png"
+                    alt="winter"
+                    class="gallery__img"
+                  >
+                </li>
+                <li class="gallery__item">
+                  <img
+                    src="./images/park.png"
+                    alt="park"
+                    class="gallery__img"
+                  >
+                </li>
+                <li class="gallery__item">
+                  <img
+                    src="./images/sea.png"
+                    alt="sea"
+                    class="gallery__img"
+                  >
+                </li>
+                <li class="gallery__item">
+                  <img
+                    src="./images/geese.png"
+                    alt="geese"
+                    class="gallery__img gallery__img--geese"
+                  >
+                </li>
+                <li class="gallery__item">
+                  <img
+                    src="./images/people.png"
+                    alt="people"
+                    class="gallery__img"
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="gallery__buttons">
+              <button class="gallery__button gallery__button--prev" title="Попередня картина">
+                &#60;
+              </button>
+              <button class="gallery__button gallery__button--next" title="Наступна картина">
+                &#62;
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__subscription subscription" id="subscription">
+        <div class="container">
+          <div class="subscription__text">
+            <div class="subscription__title">Підписка</div>
+            <label for="subscription-label" class="subscription__subtitle">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </label>
+          </div>
+          <form action="" class="subscription__form">
+            <input
+              type="email"
+              name="email"
+              id="subscription-label"
+              class="subscription__input"
+              placeholder="E-mail"
+              required
+            >
+            <button class="subscription__button"></button>           
+          </form>
         </div>
       </section>
     </main>
     
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__header">
+          <a class="footer__logo link">
+            NA
+            <br>
+            MU
+          </a>
+  
+          <div class="footer__icons">
+            <a href="" class="link footer__face">
+              <img src="./images/facebook.png" alt="facebook">
+            </a>
+            <a href="" class="link">
+              <img src="./images/insta.png" alt="insta">
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
