--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
-
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+      rel="stylesheet"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
   <body class="page__body">
     <header class="header page__header">
       <div class="header__left">
-        <h1 class="header__title header__title--left">ХУДОЖ
-          <br>МУЗЕЙ
-        </h1>
+        <h1 class="header__title header__title--left">ХУДОЖ <br>МУЗЕЙ</h1>
 
         <div class="header__select select">
           <div class="select__text">КВИТКИ</div>
@@ -34,44 +37,181 @@
       </div>
 
       <div class="header__right container">
-        <h1 class="header__title  main-title header__title--right">HІЙ
-        </h1>
+        <h1 class="header__title header__title--right">HІЙ</h1>
         <div class="header__top top-line">
           <a class="top-line__burger" href="#menu">
             <img src="./images/burger.svg" alt="pic">
           </a>
-          <a class="top-line__logo"><img src="./images/NA MU.svg" alt="pic">
+          <a class="top-line__logo">
+            <img src="./images/NA MU.svg" alt="pic">
           </a>
         </div>
       </div>
+
+      <nav class="menu header__menu" id="menu">
+        <div class="menu__container">
+          <div class="menu__actions">
+            <a class="menu__close" href="#">X</a>
+            <a class="menu__logo" href="#">
+              <img src="./images/NA MU.svg" alt="pic">
+            </a>
+          </div>
+          <ul class="menu__list list">
+            <li class="list__item">
+              <a href="#gallery" class="list__link">Галерея</a>
+            </li>
+            <li class="list__item">
+              <a href="#events" class="list__link">Виставки та події</a>
+            </li>
+            <li class="list__item">
+              <a href="#visit" class="list__link">Відвідування</a>
+            </li>
+            <li class="list__item">
+              <a href="#be-friend" class="list__link">Стати нашим другом</a>
+            </li>
+            <li class="list__item">
+              <a href="#about-us" class="list__link">Про нас</a>
+            </li>
+            <li class="list__item">
+              <a href="#shop" class="list__link">Магазин</a>
+            </li>
+            <li class="list__item">
+              <a href="#blog" class="list__link">Блог</a>
+            </li>
+            <li class="list__item">
+              <a href="#contacts" class="list__link">Контакти</a>
+            </li>
+          </ul>
+          <form action="#" class="form menu__form" id="form">
+            <label for="search" class="form__input">
+              <input type="search" id="search">
+            </label>
+          </form>
+          <a href="#form" class="menu__search"></a>
+        </div>
+      </nav>
     </header>
 
-    <nav class="menu header__menu" id="menu">
-      <div class="menu__container">
-        <div class="menu__actions">
-          <a class="menu__close" href="#">X</a>
-          <a class="menu__logo" href="#"><img src="./images/NA MU.svg" alt="pic">
-          </a>
-        </div>
-        <ul class="menu__list list">
-          <li class="list__item"><a href="#gallery" class="list__link">Галерея</a></li>
-          <li class="list__item"><a href="#events" class="list__link">Виставки та події</a></li>
-          <li class="list__item"><a href="#visit" class="list__link">Відвідування</a></li>
-          <li class="list__item"><a href="#be-friend" class="list__link">Стати нашим другом</a></li>
-          <li class="list__item"><a href="#about-us" class="list__link">Про нас</a></li>
-          <li class="list__item"><a href="#shop" class="list__link">Магазин</a></li>
-          <li class="list__item"><a href="#blog" class="list__link">Блог</a></li>
-          <li class="list__item"><a href="#contacts" class="list__link">Контакти</a></li>
-        </ul>
-        <form action="#" class="form menu__form" id="form">
-          <label for="search" class="form__input">
-            <input  type="search" id="search">
-          </label>
-        </form>
-        <a href="#form" class="menu__search"></a>
+    <main class="main page__main">
+      <div class="main__title-wrapper">
+        <p class="main__title-text">художній</p>
+        <p class="main__title-text">музей</p>
       </div>
-    </nav>
+      <div class="main__select select">
+        <div class="select__text">КВИТКИ</div>
+        <a href="#" class="select__icon">
+          <img src="./images/arrow.png" alt="select">
+        </a>
+      </div>
+      <div class="main__events events" id="events">
+        <p class="events__title">
+          <span class="events__title-word">Актуальні</span>
+          <span class="events__title-word">події</span>
+        </p>
+
+        <section class="events__item">
+          <div class="events__picture picture">
+            <img src="./images/pic1.svg " alt="pic" class="picture__img">
+          </div>
+          <div class="events__info info">
+            <div class="info__about">
+              <p class="info__exhibition">виставка</p>
+              <p class="info__date">26.08-29.11.2019</p>
+            </div>
+            <p class="info__title">Йду і повертаюсь</p>
+            <p class="info__text">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </section>
+        <section class="events__item">
+          <div class="events__picture picture">
+            <img src="./images/pic2.svg " alt="pic" class="picture__img">
+          </div>
+          <div class="events__info info">
+            <div class="info__about">
+              <p class="info__exhibition">виставка</p>
+              <p class="info__date">26.08-29.11.2019</p>
+            </div>
+            <p class="info__title">І спогади і мрії</p>
+            <p class="info__text">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </section>
+      </div>
+      <section class="events__item--special">
+        <div class="picture picture--special">
+          <img src="./images/pic4.svg " alt="pic" class="picture__img">
+        </div>
+      </section>
+      <div class="events__info--special info info--special">
+        <div class="info__about info__about--special">
+          <p class="info__exhibition">лeкція</p>
+          <p class="info__date">26/08/2019 - 11:00</p>
+        </div>
+        <p class="info--special__title">Від класицизму до романтизму</p>
+      </div>
+
+      <div class="main__gallery gallery" id="gallery">
+        <p class="gallery__title">Гaлерея</p>
+
+        <div class="gallery__container">
+          <div class="gallery__picture picture picture--gallery" data-num="1">
+            <img
+              src="./images/g1.svg"
+              alt="pic"
+              class="picture__img picture__img--gallery"
+            >
+          </div>
+          <div class="gallery__picture picture picture--gallery" data-num="2">
+            <img
+              src="./images/g2.svg"
+              alt="pic"
+              class="picture__img picture__img--gallery"
+            >
+          </div>
+          <div class="gallery__picture picture picture--gallery" data-num="3">
+            <img
+              src="./images/g3.svg"
+              alt="pic"
+              class="picture__img picture__img--gallery"
+            >
+          </div>
+          <div class="gallery__picture picture picture--gallery" data-num="4">
+            <img
+              src="./images/g4.svg"
+              alt="pic"
+              class="picture__img picture__img--gallery"
+            >
+          </div>
+          <div class="gallery__picture picture picture--gallery" data-num="6">
+            <img
+              src="./images/g5.svg"
+              alt="pic"
+              class="picture__img picture__img--gallery"
+            >
+          </div>
+          <div class="gallery__picture picture picture--gallery" data-num="6">
+            <img
+              src="./images/g6.svg"
+              alt="pic"
+              class="picture__img picture__img--gallery"
+            >
+          </div>
+        </div>
+        <form class="gallery__choise">
+          <input type="radio" class="gallery__radio" name="choise" >
+          <input type="radio" class="gallery__radio" name="choise">
+          <input type="radio" class="gallery__radio" name="choise">
+          <input type="radio" class="gallery__radio" name="choise">
+        </form>
+      </div>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
-
-  </html>
+</html>
